Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-40361

Server crashes after select xmlisvalid (validate_prepare/base)

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • N/A
    • 13.1.1
    • XML Functions
    • None
    • Can result in hang or crash
    • Q3/2026 Server Maintenance

    Description

      SELECT XMLISVALID('<root>x</root>','<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"><xs:complexType name="A"><xs:simpleContent><xs:extension base="B"/></xs:simpleContent></xs:complexType><xs:complexType name="B"><xs:simpleContent><xs:extension base="A"/></xs:simpleContent></xs:complexType><xs:element name="root" type="A"/></xs:schema>') AS r;
      

      MariaDB 13.1.0-MariaDB-asan-debug-log source revision a4757c42741d75bc50f32ac3131815e545fd4435

      crashes, but hangs while writing a core, so I do not add a stack trace

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d 19m
                  1d 19m
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4.75h Time Not Required
                  4.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.